testsuite/tests/grammar/invalid_list/invalid-element-type.lkt
import common

@with_lexer(foo_lexer)
grammar foo_grammar {
    example <- Example(@Example)
    num <- Num(@Number)
    @main_rule main_rule <- or(
        ASTList[FooNode, Example]*(num)
        | ListNode(example)
    )
}

class ListNode : FooNode {
    @parse_field items: ASTList[FooNode, FooNode]
}

class Example : FooNode implements TokenNode {
}

class Num : FooNode implements TokenNode {
}
